--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Code Everything|Where Developers learn each other</title>
     </head>
   <body>
-    <img src="logo.png" align="center">
+    <img src="logo.jpg" alt="code everything" class="center">
     </body>
+  <link rel="stylesheet" href="https://codeeverything.github.io/web/style.css">
   </html>
