--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Code Everything|Where Developers learn each other</title>
     </head>
   <body>
-    <img src="logo.jpg" alt="code everything" class="center">
+    <img src="logo.png" alt="code everything" class="center">
     </body>
   <link rel="stylesheet" href="https://codeeverything.github.io/web/style.css">
   </html>
