--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
   <body>
     <img src="logo.png" alt="code everything" class="center">
     </body>
-  <link rel="stylesheet" href="https://codeeverything.github.io/web/style.css">
+  <link rel="stylesheet" href="css/style.css">
   </html>
