--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     </head>
   <body>
     <img src="logo.png" alt="code everything" class="center">
+    
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">DS Algo</a></li>
+  <li><a href="#contact">C</a></li>
+  <li><a href="#about">Python</a></li>
+</ul>
     </body>
   <link rel="stylesheet" href="css/style.css">
   </html>
