--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <img src="logo.png" alt="code everything" class="center">
     
 <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">DS Algo</a></li>
-  <li><a href="#contact">C</a></li>
-  <li><a href="#about">Python</a></li>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#c">C</a></li>
+  <li><a href="#python">Python</a></li>
+  <li><a href="#ds_algo">DS Algo</a></li>
+  <li><a href="#linux">Linux</a></li>
+  <li><a href="#data_science">Data Science</a></li>
+  <li><a href="#cpp">C ++</a></li>
+  <li><a href="#sql">SQL</a></li>
+  <li><a href="#html">HTML</a></li>
+  <li><a href="#java">Java</a></li>
+  <li><a href="#cp">Competitive Programming</a></li>
+  <li><a href="#pwn_reversing">Binary Exploitation</a></li>
 </ul>
+    
     </body>
   <link rel="stylesheet" href="css/style.css">
   </html>
