--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <li><a href="#cp">Competitive Programming</a></li>
   <li><a href="#pwn_reversing">Binary Exploitation</a></li>
 </ul>
+    <div> <img src="we_are_at_yt.png" alt="Code Everything" class="right"></div>
     
     </body>
   <link rel="stylesheet" href="css/style.css">
