--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <li><a href="#cp">Competitive Programming</a></li>
   <li><a href="#pwn_reversing">Binary Exploitation</a></li>
 </ul>
-    <div> <img src="we_are_at_yt.png" alt="Code Everything" class="center"></div>
+    <div> <img src="we_are_at_yt.png" alt="Code Everything" href="https://www.youtube.com/channel/UCKkUM4IIFDXO68ucbRdzvmQ" class="center"></div>
     
     </body>
   <link rel="stylesheet" href="css/style.css">
