--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Code Everything|Where Developers learn each other</title>
     </head>
   <body>
-    <img src="logo.png" alt="code everything" class="center">
+    <img src="logo.png" alt="code everything" class="center"width="150" height="33">
     
 <ul>
   <li><a class="active" href="#home">Home</a></li>
