--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <li><a href="#java">Java</a></li>
   <li><a href="#cp">Competitive Programming</a></li>
   <li><a href="#iot">IoT</a></li>
-  <li><a href="#pwn_reversing">Binary Exploitation</a></li>
+  <li><a href="#pwn_reversing">Pwn & Reversing</a></li>
 </ul>
     <div> <img src="we_are_at_yt.png" alt="Code Everything" href="https://www.youtube.com/channel/UCKkUM4IIFDXO68ucbRdzvmQ" class="center"></div>
     
