--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <li><a href="#pwn_reversing">Pwn & Reversing</a></li>
 </ul>
     <div> <img src="we_are_at_yt.png" alt="Code Everything" href="https://www.youtube.com/channel/UCKkUM4IIFDXO68ucbRdzvmQ" class="center"></div>
-    <udiv><iframe width="320" height="225" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe></udiv>
+    <udiv><iframe width="320" height="225" src="https://www.youtube.com/shorts/xy_eYKqV0p8"></iframe></udiv>
+    <udiv><iframe width="320" height="225" src="https://www.youtube.com/shorts/gtXjfQqxzkg"></iframe></udiv>
     
     
     </body>
