--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <li><a href="#iot">IoT</a></li>
   <li><a href="#pwn_reversing">Pwn & Reversing</a></li>
 </ul>
-    <iframe width="50" height="20" src="https://www.youtube.com/embed/38qLP4NYv2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div><img src="we_are_at_yt.png" alt="Code Everything" href="https://www.youtube.com/channel/UCKkUM4IIFDXO68ucbRdzvmQ" class="center"></div>
+    <iframe width="250" height="220" src="https://www.youtube.com/embed/38qLP4NYv2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
   <link rel="stylesheet" href="css/style.css">
   </html>
