--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <li><a href="#sql">SQL</a></li>
   <li><a href="#html">HTML</a></li>
   <li><a href="#java">Java</a></li>
-  <li><a href="#cp">Competitive Programming</a></li>
+  <li><a href="#cp">CP</a></li>
   <li><a href="#iot">IoT</a></li>
   <li><a href="#pwn_reversing">Pwn & Reversing</a></li>
 </ul>
